--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li><strong>Programming:</strong> Python, R, Bash, JavaScript, C++, SQL, Django</li>
                     </ul>
                     <p>
-                        Founder and CEO of <a href="#" data-page="FAZENA.html" class="text-primary">FAZENA</a> — biotechnology startup.
+                        Founder and CEO of <a href="https://mregorin.github.io/FAZENA.html" data-page="FAZENA.html" class="text-primary">FAZENA</a> — biotechnology startup.
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
@@ -169,3 +169,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
