--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-md-12">
                     <ul class="list-unstyled">
                         <li><strong>Taras Shevchenko National University of Kyiv:</strong> MSc in Biology and Biochemistry, Specialization: Bioinformatics and Structural Biology (2024 – Present)</li>
-                        <li><strong>National Technical University "Kharkiv Polytechnic Institute":</strong> BSc in Biotechnology and Bioengineering, Pharmaceutical Biotechnology (2020 – 2024, Graduated with Distinction)</li>
+                        <li><strong>National Technical University "Kharkiv Polytechnic Institute":</strong> BSc in Biotechnology and Bioengineering, Pharmaceutical Biotechnology (2020 – 2024, Graduated with Honors)</li>
                         <li><strong>Scientific Schools 2025:</strong> UBDS3, CRABS 2025 (KSE), YP Biotech CRISPR School, Explogen School on Bioactive Compounds</li>
                         <li><strong>Harvard CS50:</strong> Introduction to CS, Web Development, AI with Python</li>
                         <li><strong>Kharkiv Secondary School №145:</strong> Gold Medal (2020)</li>
@@ -169,4 +169,5 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
