Update index.html with publications section
Added a new section for selected publications and updated footer year.

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-12">
                     <ul class="list-unstyled">
-                        <li><strong>Franchuk Ye.R.</strong> et al. (2025). Rational in silico redesign of the CERT1 protein. <em>V Int. Conf. Pharmaceutical Technology</em>, Kharkiv</li>
-                        <li>Bozhkov A.I., Franchuk Ye.R. et al. (2024). Wound healing dynamics in aging. <em>Arch. Gerontol. Geriatr.</em> (under review)</li>
+                        <li><strong>Franchuk Ye.R.</strong> et al. (2025). <a href="https://www.researchgate.net/publication/397496892_Rational_in_silico_redesign_of_the_CERT1_protein" class="text-primary">Rational in silico redesign of the CERT1 protein.</a> <em>V Int. Conf. Pharmaceutical Technology</em>, Kharkiv</li>
+                        <li>Bozhkov A.I., <strong>Franchuk Ye.R.</strong> et al. (2025). <a href="https://doi.org/10.47855/jal9020-2025-4-5" class="text-primary">The choice of strategy for the regeneration of excision wounds is determined by age-dependent structural and functional characteristics of the organism.</a> <em>Ageing and Longevity</em></li>
                         <li>Klimova O.M., … Franchuk Ye.R. (2023). Post-COVID syndrome and DAMP molecules. <em>Immunological Forum</em></li>
                     </ul>
                 </div>
@@ -163,11 +163,12 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center">
-        <p>© 2025 Yehor Franchuk</p>
+        <p>© 2026 Yehor Franchuk</p>
     </footer>
 
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
