Fix HTML formatting and add new publication section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <ul class="list-unstyled">
                         <li><strong>Franchuk Ye.R.</strong> et al. (2025). <a href="https://www.researchgate.net/publication/397496892_Rational_in_silico_redesign_of_the_CERT1_protein" class="text-primary">Rational in silico redesign of the CERT1 protein.</a> <em>V Int. Conf. Pharmaceutical Technology</em>, Kharkiv</li>
                         <li>Bozhkov A.I., <strong>Franchuk Ye.R.</strong> et al. (2025). <a href="https://doi.org/10.47855/jal9020-2025-4-5" class="text-primary">The choice of strategy for the regeneration of excision wounds is determined by age-dependent structural and functional characteristics of the organism.</a> <em>Ageing and Longevity</em></li>
-                        <li>Klimova O.M., … Franchuk Ye.R. (2023). Post-COVID syndrome and DAMP molecules. <em>Immunological Forum</em></li>
+                        <li>Klimova O.M., … Franchuk Ye.R. (2023). <a href="https://repository.kpi.kharkov.ua/server/api/core/bitstreams/90b100bc-cbe3-407d-a621-adbad81245f3/content" class="text-primary">Post-COVID syndrome and DAMP molecules.</a> <em>Immunological Forum</em></li>
                     </ul>
                 </div>
             </div>
@@ -169,6 +169,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
