Update index.html with publications and volunteer info
Added a new section for selected publications and updated volunteer activity details.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="col-md-12 text-center">
                     <ul class="list-unstyled">
                         <li>Volunteer bioinformatician — <strong>Bioinformatics for Ukraine</strong></li>
-                        <li>Volunteer lecturer assistant — <strong>BioGENext</strong> educational program</li>
+                        <li>Volunteer — <strong>BioGENext</strong> educational program</li>
                     </ul>
                 </div>
             </div>
@@ -169,6 +169,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
